--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <button class="menu-btn" onclick="toggleMenu()">Menu</button>
+            <button class="menu-btn" onclick="toggleMenu()">☰ Menu</button>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="photo-works.html">Photo Works</a></li>
