--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
     <header>
         <nav>
-            <button class="menu-btn" onclick="toggleMenu()">☰ Menu</button>
-            <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
+            <ul>
+                <li><a href="index.html"><img src="images/logo.png" alt="Your Company Logo" class="logo"></a></li>
                 <li><a href="photo-works.html">Photo Works</a></li>
                 <li><a href="#">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
