--- a/photo-works.html
+++ b/photo-works.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"><img src="images/logo.png" alt="Your Company Logo" class="logo"></a></li>
                 <li><a href="photo-works.html">Photo Works</a></li>
                 <li><a href="#">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
@@ -39,7 +39,7 @@
             </div>
         </div>
     </footer>
-    
+
     <!-- モーダルウィンドウ -->
     <div id="myModal" class="modal">
         <span class="close" onclick="closeModal()">&times;</span>
