--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ホーム - Your Company Name</title>
+    <title>iT4P studio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html"><img src="images/logo.png" alt="Your Company Logo" class="logo"></a></li>
+                <li><a href="index.html"><img src="images/logo.png" alt="Logo" class="logo"></a></li>
                 <li><a href="photo-works.html">Photo Works</a></li>
                 <li><a href="#">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
@@ -31,11 +31,5 @@
             </a>
         </div>
     </main>
-    <script>
-        function toggleMenu() {
-            var menu = document.querySelector('.nav-menu');
-            menu.classList.toggle('active');
-        }
-    </script>
 </body>
 </html>
