--- a/photo-works.html
+++ b/photo-works.html
@@ -33,7 +33,7 @@
             </a>
         </section>
         <section class="event-list">
-            <h2>イベント一覧</h2>
+            <h2>Events</h2>
             <ul>
                 <li><a href="#">イベント 1</a></li>
                 <li><a href="#">イベント 2</a></li>
