add movie works link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html"><img src="images/logo.png" alt="Logo" class="logo"></a></li>
                 <li><a href="photo-works.html">Photo Works</a></li>
-                <li><a href="#">Movie Works</a></li>
+                <li><a href="movie-works.html">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Contact</a></li>
@@ -26,7 +26,7 @@
             </a>
         </div>
         <div class="split right">
-            <a href="#" class="overlay">
+            <a href="movie-works.html" class="overlay">
                 <div class="text">Movie Works</div>
             </a>
         </div>
