--- a/photo-works.html
+++ b/photo-works.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="photo-works.html">Photo Works</a></li>
-                <li><a href="#">Movie Works</a></li>
+                <li><a href="movie-works.html">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Contact</a></li>
