--- a/photo-works.html
+++ b/photo-works.html
@@ -22,6 +22,7 @@
     </header>
     <main class="photo-works-container">
         <section class="gallery">
+            <h2>Photo Works</h2>
             <a href="images/gallery0001-highres.png" data-lightbox="photo-works">
                 <img src="images/gallery0001-lowres.png" alt="Photo 1" loading="lazy">
             </a>
