--- a/movie-works.html
+++ b/movie-works.html
@@ -10,7 +10,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html"><img src="images/logo.png" alt="Logo" class="logo"></a></li>
+                <li>
+                    <a href="index.html">
+                        <img src="images/logo_W.png" alt="Logo" class="logo">
+                        <img src="images/logo_B.png" alt="Logo" class="logo-hover">
+                    </a>
+                </li>
                 <li><a href="photo-works.html">Photo Works</a></li>
                 <li><a href="movie-works.html">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
