--- a/photo-works.html
+++ b/photo-works.html
@@ -40,10 +40,13 @@
         <section class="event-list">
             <h2>Events</h2>
             <ul>
-                <li><a href="#">イベント 1</a></li>
-                <li><a href="#">イベント 2</a></li>
-                <li><a href="#">イベント 3</a></li>
-                <!-- Add more events as needed -->
+                <li><a href="#">東京マラソン</a></li>
+                <li><a href="#">青梅マラソン</a></li>
+                <li><a href="#">SPARTAN RACE</a></li>
+                <li><a href="#">他 全国のマラソン</a></li> 
+                <li><a href="#">中学校総合体育大会（全国）</a></li>
+                <li><a href="#">高等学校総合体育大会（全国）</a></li>
+                <li><a href="#">各種スクールイベント・証明写真</a></li>
             </ul>
         </section>
     </main>
