--- a/photo-works.html
+++ b/photo-works.html
@@ -44,9 +44,17 @@
                 <li><a href="#">青梅マラソン</a></li>
                 <li><a href="#">SPARTAN RACE</a></li>
                 <li><a href="#">他 全国のマラソン</a></li> 
-                <li><a href="#">中学校総合体育大会（全国）</a></li>
-                <li><a href="#">高等学校総合体育大会（全国）</a></li>
-                <li><a href="#">各種スクールイベント・証明写真</a></li>
+                <li><a href="#">UNIDOL</a></li>
+                <li><a href="#">UNIKP</a></li>
+                <li><a href="#">世田谷区空手道選手権大会</a></li>
+                <li><a href="#">中学校総合体育大会 バレー・バスケ・ハンドボール・軟式野球（全国）</a></li>
+                <li><a href="#">高等学校総合体育大会 バレー・バスケ（全国）</a></li>
+                <li><a href="#">各種スクール（幼・保・小・中・高・大学）イベント・証明写真</a></li>
+                <li><a href="#">ジャビットカップチャンピオン大会</a></li>
+                <li><a href="#">各種式典</a></li>
+                <li><a href="#">広告写真</a></li>
+                <li><a href="#">モータースポーツ</a></li>
+                <li><a href="#">ウィンタースポーツ</a></li>
             </ul>
         </section>
     </main>
