--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <a href="https://x.com/it4p_studio" target="_blank" class="x-icon">
+                <img src="images/x.png" alt="X Icon">
+            </a>
         </nav>
     </header>
     <main>
