add header link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="movie-works.html">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
                 <li><a href="#">Profile</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <a href="https://x.com/it4p_studio" target="_blank" class="x-icon">
                 <img src="images/x.png" alt="X Icon">
