--- a/photo-works.html
+++ b/photo-works.html
@@ -21,7 +21,7 @@
                 <li><a href="movie-works.html">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
                 <li><a href="#">Profile</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
