--- a/contact.html
+++ b/contact.html
@@ -8,46 +8,26 @@
 </head>
 <body>
     <header>
-      <nav>
-        <ul>
-            <li>
-                <a href="index.html">
-                    <img src="images/logo_W.png" alt="Logo" class="logo">
-                    <img src="images/logo_B.png" alt="Logo" class="logo-hover">
-                </a>
-            </li>
-            <li><a href="photo-works.html">Photo Works</a></li>
-            <li><a href="movie-works.html">Movie Works</a></li>
-            <li><a href="#">Price</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <a href="https://x.com/it4p_studio" target="_blank" class="x-icon">
-            <img src="images/x.png" alt="X Icon">
-        </a>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="photo-works.html">Photo Works</a></li>
+                <li><a href="movie-works.html">Movie Works</a></li>
+                <li><a href="#">Price</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <main class="contact-page">
-        <h1>Contact Us</h1>
-        <form action="/submit_form" method="post" class="contact-form">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
+    <main>
+        <section class="contact-section">
+            <h1>Contact Us</h1>
+            <div class="contact-info">
+                <p><strong>Mail:</strong> <a href="mailto:goshi.itahara@it4pstudio.com">goshi.itahara@it4pstudio.com</a></p>
+                <p><strong>Phone:</strong> <a href="tel:+819099630054">090-9963-0054</a></p>
+                <p><strong>代表:</strong> 板原豪士</p>
             </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="subject">Subject</label>
-                <input type="text" id="subject" name="subject" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-            </div>
-            <button type="submit" class="submit-button">Send</button>
-        </form>
+        </section>
     </main>
 </body>
 </html>
