--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - iT4P studio</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: '游ゴシック', 'Avenir Next', sans-serif;
+        }
+    </style>
 </head>
 <body>
     <header>
