--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="photo-works.html">Photo Works</a></li>
                 <li><a href="movie-works.html">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="profile.html">Profile</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <a href="https://x.com/it4p_studio" target="_blank" class="x-icon">
