--- a/movie-works.html
+++ b/movie-works.html
@@ -19,7 +19,7 @@
                 <li><a href="photo-works.html">Photo Works</a></li>
                 <li><a href="movie-works.html">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="profile.html">Profile</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
