--- a/photo-works.html
+++ b/photo-works.html
@@ -20,7 +20,7 @@
                 <li><a href="photo-works.html">Photo Works</a></li>
                 <li><a href="movie-works.html">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="profile.html">Profile</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
