--- a/profile.html
+++ b/profile.html
@@ -1,147 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="table.css">
-    <title>プロフィール/Profile | iTAP</title>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXSXBWB229"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-KXSXBWB229');
-    </script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Works - Your Company Name</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="pagebody">
-
-    <!-- ヘッダ -->
-    <div id="header">
-    <h1><a href="index.html"><img src="images/logo.png" alt="iTAP"></a></h1>
-    </div>
-
-    <!-- メインメニュー -->
-    <ul id="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="blog.html">Works</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="profile.html">Profile</a></li>
-        </ul>
-
-    <!-- ヘッダ画像 -->
-    <div id="img_subpage">
-	<img src="./images/img_profile.png" alt="画像が正しく表示されていません。設定をご確認ください。">
-    </div>
-
-    <!-- サブメニュー（左カラム） -->
-	<div id="submenu">
-	    <h2>Profile</h2>
-	    <ul>
-		    <li><a href="#info0003">基本情報</a></li>
-            <li><a href="#info0002">所持機材</a></li>
-            <li><a href="#info0001">撮影対象</a></li>
-	    </ul>
-    </div>
-
-    <!-- インフォメーション（右カラム） -->
-	<div id="info">
-            <h4 id="info0003">基本情報</h4>
-            <table class="profile">
-                <tr>
-                <th>名前</th>
-                <td>
-                iTAP(アイタップ)
-                </td>
-                </tr>
-
-                <tr>
-                <th>経歴</th>
-                <td>
-                2003年東京生まれ<br>
-                2022年3月広尾学園高等学校卒業<br>
-                2022年千株式会社と業務委託契約を開始
-                2022年株式会社フォトクリエイトと業務委託契約を開始<br>
-                2023年現在現在筑波大学情報学群に所属<br>
-                Mail:itapmovie@gmail.com
-                </td>
-                </tr>
-            </table>
-
-            <h4 id="info0002">所持機材(随時更新)</h4>
-            <table class="profile">
-                <tr>
-                    <th>ボディ</th>
-                    <td>
-                        Nikon Z 9<br>
-                        Nikon Z 8<br>
-                        Nikon Z 6<br>
-                        Nikon D90<br>
-                        Nikon F3<br>
-                        Nikon FE2<br>
-                        Nikon F80<br>
-                    </td>
-                </tr>
-
-                <tr>                   
-                    <th>レンズ</th>
-                    <td>
-                        NIKKOR Z 24-70mm f/4 S<br>
-                        NIKKOR Z 70-200mm f/2.8 VR S<br>
-                        NIKKOR Z 50mm f/1.2 S<br>
-                        マウントアダプター FTZ<br>
-                        AF-S DX NIKKOR 18-105mm f/3.5-5.6G ED VR<br>
-                        Ai AF Zoom Nikkor 28～105mm F3.5～4.5D（IF）<br>
-                        SIGMA 30mm F1.4 EX DC HSM
-                        etc
-                    </td>
-                </tr>
-
-                <tr>
-                    <th>ストロボ</th>
-                    <td>スピードライト SB-800</td>
-                </tr>
-
-                <tr>                   
-                    <th>オーディオ</th>
-                    <td>
-                        TASCAM DR-07MKII<br>
-                        SENNHEISER E935<br>
-                        SONY MDR-M1ST<br>
-                        SENNHEISER IE 40 PRO<br>
-                        SENNHEISER IE 100 PRO<br>
-                        Native Instruments Komplete Audio 6
-                    </td>
-                </tr>
-
-                <tr>                   
-                    <th>使用ソフト</th>
-                    <td>
-                        Adobe Premiere Pro<br>
-                        Adobe After Effects<br>
-                        Adobe Audition<br>
-                        Adobe Photoshop<br>
-                        Adobe Lightroom Classic<br>
-                        Resolume Avenue
-                    </td>
-                </tr>
-
-                </table>
-
-            <h4 id="info0001">撮影対象</h4>
-            <p>
-                各種スポーツ競技・イベント・スクールフォト
-            </p>
-    </div>
-
-    <!-- フッタ -->     
-    <div id="footer"><small>Copyright (c) 2023 iTAP All Rights Reserved.</small></div>
-            
-</div>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        <img src="images/logo_W.png" alt="Logo" class="logo">
+                        <img src="images/logo_B.png" alt="Logo" class="logo-hover">
+                    </a>
+                </li>
+                <li><a href="photo-works.html">Photo Works</a></li>
+                <li><a href="movie-works.html">Movie Works</a></li>
+                <li><a href="#">Price</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="coming-soon">
+            <h1>Profile</h1>
+            <p>準備中です。しばらくお待ちください。</p>
+        </section>
+    </main>
 </body>
 </html>
