--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Works - Your Company Name</title>
+    <title>Profile - iT4P studio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,9 +25,14 @@
         </nav>
     </header>
     <main>
-        <section class="coming-soon">
+        <section class="profile-section">
             <h1>Profile</h1>
-            <p>準備中です。しばらくお待ちください。</p>
+            <ul class="profile-list">
+                <li>2003 生まれ 東京都 出身</li>
+                <li>2022 広尾学園 医進・サイエンスコース卒業</li>
+                <li>2023 iT4P studioを開業</li>
+                <li>2026 筑波大学 情報学群 知識情報・図書館学類 卒業（予定）</li>
+            </ul>
         </section>
     </main>
 </body>
