make profile.html

--- a/profile.html
+++ b/profile.html
@@ -26,13 +26,38 @@
     </header>
     <main>
         <section class="profile-section">
-            <h1>Profile</h1>
-            <ul class="profile-list">
-                <li>2003 生まれ 東京都 出身</li>
-                <li>2022 広尾学園 医進・サイエンスコース卒業</li>
-                <li>2023 iT4P studioを開業</li>
-                <li>2026 筑波大学 情報学群 知識情報・図書館学類 卒業（予定）</li>
+            <ul class="profile-list-about">
+                <h1>About</h1>
+                <li><img src="/images/about.png" alt="about" width="250"></li>
+                <li>Goshi Itahara</li>
             </ul>
+
+            <ul class="profile-list">
+                <h1>Profile</h1>
+                <li>2003 Born in Tokyo, Japan</li>
+                <li><a href="https://www.hiroogakuen.ed.jp/">2022 Graduated from Hiroo Gakuen High School</a></li>
+                <li>2023 Established iT4P studio</li>
+                <li><a href="https://npsjapan.nikon-image.com/about/">2023 Joined NPS (Nikon Professional Services)</a></li>
+                <li><a href="https://www.tsukuba.ac.jp/">2026 Expected to graduate from the University of Tsukuba</a></li>
+            </ul>
+
+            <ul class="profile-list">
+                <h1>Equipment</h1>
+                <li>Nikon Z9</li>
+                <li>Nikon Z8</li>
+                <li>Nikon Z6</li>
+                <li>NIKKOR Z 24-70mm f/4 S</li>
+                <li>NIKKOR Z 70-200mm f/2.8 VR S</li>
+                <li>NIKKOR Z 50mm f/1.2 S</li>
+                <li>AF-S Fisheye NIKKOR 8-15mm f/3.5-4.5E ED</li>
+            </ul>
+            
+            <ul class="profile-list-sns">
+                <h1>SNS</h1>
+                <li><a href="https://x.com/it4p_studio"><img src="/images/x.png" alt="X" width="70"></a></li>
+                <li><a href="https://www.instagram.com/it4hara5a/"><img src="/images/Instagram.png" alt="instagram" width="50"></a></li>
+            </ul>
+            
         </section>
     </main>
 </body>
