--- a/photo-works.html
+++ b/photo-works.html
@@ -23,6 +23,9 @@
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+            <a href="https://x.com/it4p_studio" target="_blank" class="x-icon">
+                <img src="images/x.png" alt="X Icon">
+            </a>
         </nav>
     </header>
     <main class="photo-works-container">
