--- a/contact.html
+++ b/contact.html
@@ -12,26 +12,26 @@
     </style>
 </head>
 <body>
-  <header>
-    <nav>
-        <ul>
-            <li>
-                <a href="index.html">
-                    <img src="images/logo_W.png" alt="Logo" class="logo">
-                    <img src="images/logo_B.png" alt="Logo" class="logo-hover">
-                </a>
-            </li>
-            <li><a href="photo-works.html">Photo Works</a></li>
-            <li><a href="movie-works.html">Movie Works</a></li>
-            <li><a href="#">Price</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <a href="https://x.com/it4p_studio" target="_blank" class="x-icon">
-            <img src="images/x.png" alt="X Icon">
-        </a>
-    </nav>
-</header>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        <img src="images/logo_W.png" alt="Logo" class="logo">
+                        <img src="images/logo_B.png" alt="Logo" class="logo-hover">
+                    </a>
+                </li>
+                <li><a href="photo-works.html">Photo Works</a></li>
+                <li><a href="movie-works.html">Movie Works</a></li>
+                <li><a href="#">Price</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <a href="https://x.com/it4p_studio" target="_blank" class="x-icon">
+                <img src="images/x.png" alt="X Icon">
+            </a>
+        </nav>
+    </header>
     <main>
         <section class="contact-section">
             <h1>Contact Us</h1>
