--- a/movie-works.html
+++ b/movie-works.html
@@ -20,8 +20,11 @@
                 <li><a href="movie-works.html">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
+            <a href="https://x.com/it4p_studio" target="_blank" class="x-icon">
+                <img src="images/x.png" alt="X Icon">
+            </a>
         </nav>
     </header>
     <main>
