--- a/price.html
+++ b/price.html
@@ -29,7 +29,7 @@
     </header>
     <main>
         <section class="coming-soon">
-            <h1>Movie Works</h1>
+            <h1>Price</h1>
             <p>準備中です。しばらくお待ちください。</p>
         </section>
     </main>
