del about add links

--- a/profile.html
+++ b/profile.html
@@ -109,12 +109,6 @@
     </script>
     <main>
         <section class="profile-section">
-            <ul class="profile-list-about">
-                <h1>About</h1>
-                <li><img src="/images/about.png" alt="about" width="250"></li>
-                <li>Goshi Itahara</li>
-            </ul>
-
             <ul class="profile-list">
                 <h1>Profile</h1>
                 <li>2003 Born in Tokyo, Japan</li>
@@ -139,6 +133,11 @@
                 <h1>SNS</h1>
                 <li><a href="https://x.com/it4p_studio"><img src="/images/x.png" alt="X" width="70"></a></li>
                 <li><a href="https://www.instagram.com/it4hara5a/"><img src="/images/Instagram.png" alt="instagram" width="50"></a></li>
+            </ul>
+
+            <ul class="profile-list-sns">
+                <h1>Links</h1>
+                <li>txt</li>
             </ul>
             
         </section>
