--- a/profile.html
+++ b/profile.html
@@ -136,8 +136,8 @@
             </ul>
 
             <ul class="profile-list-sns">
-                <h1>Links</h1>
-                <li>txt</li>
+                <h1>Others</h1>
+                <li><a href="https://iorin.io/" target="_blank" rel="noopener noreferrer">iorin.io</a></li>
             </ul>
             
         </section>
