add ultra and raspi

--- a/profile.html
+++ b/profile.html
@@ -138,6 +138,8 @@
             <ul class="profile-list-sns">
                 <h1>Others</h1>
                 <li><a href="https://iorin.io/" target="_blank" rel="noopener noreferrer">iorin.io</a></li>
+                <li><a href="https://www.ultrabumbuku.dev/" target="_blank" rel="noopener noreferrer">ultrabumbuku</a></li>
+                <li><a href="https://raspi0124.dev//" target="_blank" rel="noopener noreferrer">raspi0124</a></li>
             </ul>
             
         </section>
