--- a/profile.html
+++ b/profile.html
@@ -115,6 +115,7 @@
                 <li><a href="https://www.hiroogakuen.ed.jp/">2022 Graduated from Hiroo Gakuen High School</a></li>
                 <li>2023 Established iT4P studio</li>
                 <li><a href="https://npsjapan.nikon-image.com/about/">2023 Joined NPS (Nikon Professional Services)</a></li>
+                <li><a href="https://www.ipa.go.jp/shiken/kubun/ap.html">2024 Applied Information Technology Engineer Exam</a></li>
                 <li><a href="https://www.tsukuba.ac.jp/">2026 Expected to graduate from the University of Tsukuba</a></li>
             </ul>
 
