--- a/profile.html
+++ b/profile.html
@@ -114,20 +114,28 @@
                 <li>2003 Born in Tokyo, Japan</li>
                 <li><a href="https://www.hiroogakuen.ed.jp/">2022 Graduated from Hiroo Gakuen High School</a></li>
                 <li>2023 Established iT4P studio</li>
-                <li><a href="https://npsjapan.nikon-image.com/about/">2023 Joined NPS (Nikon Professional Services)</a></li>
-                <li><a href="https://www.ipa.go.jp/shiken/kubun/ap.html">2024 Applied Information Technology Engineer Exam</a></li>
-                <li><a href="https://www.tsukuba.ac.jp/">2026 Expected to graduate from the University of Tsukuba</a></li>
+                <li><a href="https://www.tsukuba.ac.jp/">2026 Expected to graduate from the University of Tsukuba</a></li><br>
+                <li><a href="https://npsjapan.nikon-image.com/about/">NPS (Nikon Professional Services)</a></li>
+                <li><a href="https://www.ipa.go.jp/shiken/kubun/ap.html">Applied Information Technology Engineer Exam</a></li>
+                <li><a href="https://www.shoubo-shiken.or.jp/knowledge/kikenbutsu.html">Hazardous Materials Engineer in Class B Group 4</a></li>
+                <li><a href="https://www.shoubo-shiken.or.jp/knowledge/kikenbutsu.html">Driver's License (1st grade)</a></li>
+                <li><a href="https://motorsports.jaf.or.jp/license/overview/b">Competition Driver's License B in Japan</a></li>
+                <li><a href="https://www.ipsj.or.jp/index.html">Information Processing Society of Japan(Jr.)</a></li>
             </ul>
 
             <ul class="profile-list">
                 <h1>Equipment</h1>
                 <li>Nikon Z9</li>
                 <li>Nikon Z8</li>
-                <li>Nikon Z6</li>
+                <li>Nikon Z6</li><br>
                 <li>NIKKOR Z 24-70mm f/4 S</li>
                 <li>NIKKOR Z 70-200mm f/2.8 VR S</li>
                 <li>NIKKOR Z 50mm f/1.2 S</li>
-                <li>AF-S Fisheye NIKKOR 8-15mm f/3.5-4.5E ED</li>
+                <li>AF-S Fisheye NIKKOR 8-15mm f/3.5-4.5E ED</li><br>
+                <li>M1ST</li>
+                <li>IE100Pro</li>
+                <li>KOMPLETE AUDIO 6 MK2</li><br>
+                <li>GR86(ZN8)</li>
             </ul>
             
             <ul class="profile-list-sns">
